# filetransfer

./: README.md  pyproject.toml
filetransfer/: arguments.py  cli.py
filetransfer/commands/: __init__.py  pack.py  restore.py  verify.py
filetransfer/core/: __init__.py  container_7z.py  manifest.py  payload_stream.py  stream_source.py
filetransfer/system/: __init__.py  checksum.py  errors.py  toolchain.py  validators.py
seven_z_streamer/: __init__.py  arguments.py  cli.py  constants.py  container_7z.py  json_io.py  manifest.py  pack.py  payload_stream.py  processes.py  restore.py  stream_source.py  verify.py
tests/: test_cli.py
