[project]
name = "filetransfer"
version = "0.1.0"
description = "Stream tar/zstd data into ordered 7z transport packages and restore it losslessly."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "7z-streamer contributors" }]

[project.scripts]
filetransfer = "seven_z_streamer.cli:main"
7z-streamer = "seven_z_streamer.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["seven_z_streamer*"]
